My first commit. Added a new project and a file.

--- a/my-project/test1.html
+++ b/my-project/test1.html
@@ -1,1 +1,1 @@
-This is some content that has been added to the cloned repository. 
+This is some added content to the html page from the "my project" folder. 
