Second commit completed. Updated test1.html with additional content.

--- a/my-project/test1.html
+++ b/my-project/test1.html
@@ -1,1 +1,1 @@
-This is some added content to the html page from the "my project" folder. 
+This is the modified content to the html page from the "my project" folder. 
